Move zip off S3 for now

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </p>
     <p>
       You can also download
-      <a href='http://s3.amazonaws.com/loebolus/loebolus.zip'>
+      <a href='http://rfbaumann.com/loebolus.zip'>
         a .zip containing all 245 PDF's
       </a>
       (3.2GB).
