--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <p>
       You can also download
       <a href='https://github.com/ryanfb/loebolus-data/archive/master.zip'>
-        a .zip containing all 245 PDF's
+        a .zip containing all 246 PDF's
       </a>
       (3.2GB).
       Or
@@ -358,6 +358,11 @@
       <li>
         <a href='http://ryanfb.github.io/loebolus-data/L064N.pdf'>
           L064N - Virgil -- Aeneid Books 7-12, The Minor Poems
+        </a>
+      </li>
+      <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L065.pdf'>
+          L065 - Plutarch -- Lives III: Pericles and Fabius Maximus. Nicias and Crassus
         </a>
       </li>
       <li>
