--- a/index.html
+++ b/index.html
@@ -1315,7 +1315,7 @@
       </li>
     </ul>
     <small>
-      By downloading any of these files, you agree that you have verified that it is legal to do so from your territory. If you believe you are the copyright holder on any of these files and that they are <strong>not</strong> in the public domain in the United States, please <a href='mailto:ryan.baumann@gmail.com'>contact me</a>.
+      By downloading any of these files, you agree that you have verified that it is legal to do so from your territory. If you believe you are the copyright holder on any of these files and that they are <strong>not</strong> in the public domain in the United States, please <a href='mailto:ryan.baumann@gmail.com'>contact me</a>. Note that for works published or with a copyright notice between 1923 and 1963 and linked from here, I have attempted to verify that there has been no <a href='http://collections.stanford.edu/copyrightrenewals/'>copyright renewal</a> and that the work is not covered by GATT, allowing the work to fall into the public domain in the United States.
     </small>
   </body>
 </html>
