Re-run yaml2html and yaml2rdf

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p>
       You can also download
       <a href='https://github.com/ryanfb/loebolus-data/archive/master.zip'>
-        a .zip containing all 251 PDF's
+        a .zip containing all 267 PDF's
       </a>
       (3.2GB).
       Or
@@ -684,6 +684,11 @@
         </a>
       </li>
       <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L131.pdf'>
+          L131 - Epictetus -- Discourses, Books 1-2
+        </a>
+      </li>
+      <li>
         <a href='http://ryanfb.github.io/loebolus-data/L132.pdf'>
           L132 - Menander -- Principal Fragments: Arbitrants. Girl from Samos. Girl Who Gets Her Hair Cut Short. Hero. Fragments. Unidentified Comedy
         </a>
@@ -954,6 +959,11 @@
         </a>
       </li>
       <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L218.pdf'>
+          L218 - Epictetus -- Discourses, Books 3-4. Fragments. The Encheiridion
+        </a>
+      </li>
+      <li>
         <a href='http://ryanfb.github.io/loebolus-data/L219.pdf'>
           L219 - Oppian -- Oppian. Colluthus. Tryphiodorus
         </a>
@@ -964,6 +974,11 @@
         </a>
       </li>
       <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L222.pdf'>
+          L222 - Plutarch -- Moralia II: How to Profit by One's Enemies. On Having Many Friends. Chance. Virtue and Vice. Letter of Condolence to Apollonius. Advice About Keeping Well. Advice to Bride and Groom. The Dinner of the Seven Wise Men. Superstition
+        </a>
+      </li>
+      <li>
         <a href='http://ryanfb.github.io/loebolus-data/L223.pdf'>
           L223 - Strabo -- Geography VI: Books 13-14
         </a>
@@ -971,6 +986,11 @@
       <li>
         <a href='http://ryanfb.github.io/loebolus-data/L225N.pdf'>
           L225N - Theophrastus -- Characters of Theophrastus
+        </a>
+      </li>
+      <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L226.pdf'>
+          L226 - Philo -- Volume I: On the Creation. Allegorical Interpretation of Genesis 2 and 3
         </a>
       </li>
       <li>
@@ -1014,8 +1034,18 @@
         </a>
       </li>
       <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L245.pdf'>
+          L245 - Plutarch -- Moralia III: Sayings of Kings and Commanders. Sayings of Romans. Sayings of Spartans. The Ancient Customs of the Spartans. Sayings of Spartan Women. Bravery of Women
+        </a>
+      </li>
+      <li>
         <a href='http://ryanfb.github.io/loebolus-data/L246.pdf'>
           L246 - Bede -- Opera Historica I: Books 1-3
+        </a>
+      </li>
+      <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L247.pdf'>
+          L247 - Philo -- Volume III: On the Unchangeableness of God. On Husbandry. Concerning Noah's Work As a Planter. On Drunkenness. On Sobriety
         </a>
       </li>
       <li>
@@ -1046,6 +1076,11 @@
       <li>
         <a href='http://ryanfb.github.io/loebolus-data/L260.pdf'>
           L260 - Plautus -- Plautus IV: The Little Carthaginian. Pseudolus. The Rope
+        </a>
+      </li>
+      <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L261.pdf'>
+          L261 - Philo -- Volume IV: On the Confusion of Tongues. On the Migration of Abraham. Who Is the Heir of Divine Things? On Mating with the Preliminary Studies
         </a>
       </li>
       <li>
@@ -1084,6 +1119,11 @@
         </a>
       </li>
       <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L275.pdf'>
+          L275 - Philo -- Volume V: On Flight and Finding. On the Change of Names. On Dreams
+        </a>
+      </li>
+      <li>
         <a href='http://ryanfb.github.io/loebolus-data/L276.pdf'>
           L276 - Plato -- Republic II: Books 6-10
         </a>
@@ -1101,6 +1141,11 @@
       <li>
         <a href='http://ryanfb.github.io/loebolus-data/L285.pdf'>
           L285 - Aristotle -- Athenian Constitution. Eudemian Ethics. Virtues and Vices
+        </a>
+      </li>
+      <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L289.pdf'>
+          L289 - Philo -- Volume VI: On Abraham. On Joseph. On Moses
         </a>
       </li>
       <li>
@@ -1129,6 +1174,11 @@
         </a>
       </li>
       <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L306.pdf'>
+          L306 - Plutarch -- Moralia V: Isis and Osiris. The E at Delphi. The Oracles at Delphi No Longer Given in Verse. The Obsolescence of Oracles
+        </a>
+      </li>
+      <li>
         <a href='http://ryanfb.github.io/loebolus-data/L307.pdf'>
           L307 - Aristotle -- Minor Works
         </a>
@@ -1141,6 +1191,11 @@
       <li>
         <a href='http://ryanfb.github.io/loebolus-data/L317.pdf'>
           L317 - Aristotle -- Problems II: Books 22-38
+        </a>
+      </li>
+      <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L320.pdf'>
+          L320 - Philo -- Volume VII: On the Decalogue. On the Special Laws, Books 1-3
         </a>
       </li>
       <li>
@@ -1189,6 +1244,11 @@
         </a>
       </li>
       <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L341.pdf'>
+          L341 - Philo -- Volume VIII: On the Special Laws, Book 4. On the Virtues. On Rewards and Punishments
+        </a>
+      </li>
+      <li>
         <a href='http://ryanfb.github.io/loebolus-data/L350.pdf'>
           L350 - Manetho -- History of Egypt and Other Works
         </a>
@@ -1216,6 +1276,11 @@
       <li>
         <a href='http://ryanfb.github.io/loebolus-data/L360.pdf'>
           L360 - Greek Literary Papyri I
+        </a>
+      </li>
+      <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L363.pdf'>
+          L363 - Philo -- Volume IX: Every Good Man is Free. On the Contemplative Life. On the Eternity of the World. Against Flaccus. Apology for the Jews. On Providence
         </a>
       </li>
       <li>
@@ -1251,6 +1316,16 @@
       <li>
         <a href='http://ryanfb.github.io/loebolus-data/L376.pdf'>
           L376 - Dio Chrysostom -- Dio Chrysostom IV: Discourses 37-60
+        </a>
+      </li>
+      <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L379.pdf'>
+          L379 - Philo -- Volume X: On the Embassy to Gaius. General Indexes
+        </a>
+      </li>
+      <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L380.pdf'>
+          L380 - Philo -- Volume Supplement I: Questions and Answers on Genesis
         </a>
       </li>
       <li>
@@ -1291,6 +1366,11 @@
       <li>
         <a href='http://ryanfb.github.io/loebolus-data/L400.pdf'>
           L400 - Aristotle -- On Sophistical Refutations. On Coming-to-be and Passing Away. On the Cosmos
+        </a>
+      </li>
+      <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L401.pdf'>
+          L401 - Philo -- Volume Supplement II: Questions and Answers on Exodus
         </a>
       </li>
       <li>
