--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p>
       You can also download
       <a href='https://github.com/ryanfb/loebolus-data/archive/master.zip'>
-        a .zip containing all 267 PDF's
+        a .zip containing all 268 PDF's
       </a>
       (3.2GB).
       Or
@@ -1376,6 +1376,11 @@
       <li>
         <a href='http://ryanfb.github.io/loebolus-data/L406.pdf'>
           L406 - Plutarch -- Moralia XII: Concerning the Face Which Appears in the Orb of the Moon. On the Principle of Cold. Whether Fire or Water Is More Useful. Whether Land or Sea Animals Are Cleverer. Beasts Are Rational. On the Eating of Flesh
+        </a>
+      </li>
+      <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L418.pdf'>
+          L418 - Pliny -- Natural History VIII: Books 28-32. Index of Fishes
         </a>
       </li>
       <li>
