--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p>
       You can also download
       <a href='https://github.com/ryanfb/loebolus-data/archive/master.zip'>
-        a .zip containing all 268 PDF's
+        a .zip containing all 269 PDF's
       </a>
       (3.2GB).
       Or
@@ -856,6 +856,11 @@
       <li>
         <a href='http://ryanfb.github.io/loebolus-data/L183.pdf'>
           L183 - Xenophon -- Scripta Minora: Hiero. Agesilaus. Constitution of the Lacedaemonians. Ways and Means. Cavalry Commander. Art of Horsemanship. On Hunting. Constitution of the Athenians
+        </a>
+      </li>
+      <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L184.pdf'>
+          L184 - Diogenes Laertius -- Lives of Eminent Philosophers I: Books 1-5
         </a>
       </li>
       <li>
