Enhanced link attribution

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     </style>
     <script>
       var _gaq = _gaq || [];
+      var pluginUrl =
+       '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
+      _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
       _gaq.push(['_setAccount', 'UA-32373168-1']);
       _gaq.push(['_trackPageview']);
       (function() {
