--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p>
       You can also download
       <a href='https://github.com/ryanfb/loebolus-data/archive/master.zip' onclick="trackOutboundLink('https://github.com/ryanfb/loebolus-data/archive/master.zip'); return false;">
-        a .zip containing all 269 PDF's
+        a .zip containing all 271 PDF's
       </a>
       (3.2GB).
       Or
@@ -803,6 +803,16 @@
       <li>
         <a href='http://ryanfb.github.io/loebolus-data/L157.pdf' onclick="trackOutboundLink('http://ryanfb.github.io/loebolus-data/L157.pdf'); return false;">
           L157 - Julian -- Julian III: Letters. Epigrams. Against the Galilaeans. Fragments
+        </a>
+      </li>
+      <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L159.pdf' onclick="trackOutboundLink('http://ryanfb.github.io/loebolus-data/L159.pdf'); return false;">
+          L159 - Polybius -- Histories IV: Books 9-15
+        </a>
+      </li>
+      <li>
+        <a href='http://ryanfb.github.io/loebolus-data/L160.pdf' onclick="trackOutboundLink('http://ryanfb.github.io/loebolus-data/L160.pdf'); return false;">
+          L160 - Polybius -- Histories V: Books 16-27
         </a>
       </li>
       <li>
