--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <title>Loebolus</title>
     <link href='index.rdf' rel='alternate' type='application/rdf+xml'>
-    <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
     <style>
       h1, h2, h3, h4 {
         font-family:'Palatino', 'EB Garamond', serif;
