Re-run yaml2html and yaml2rdf

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p>
       You can also download
       <a href='https://github.com/ryanfb/loebolus-data/archive/gh-pages.zip' onclick="trackOutboundLink('https://github.com/ryanfb/loebolus-data/archive/gh-pages.zip'); return false;">
-        a .zip containing all 271 PDF's
+        a .zip containing all 273 PDF's
       </a>
       (3.2GB).
       Or
@@ -1286,8 +1286,18 @@
         </a>
       </li>
       <li>
+        <a href='https://ryanfb.github.io/loebolus-data/L354.pdf' onclick="trackOutboundLink('https://ryanfb.github.io/loebolus-data/L354.pdf'); return false;">
+          L354 - Nonnos -- Dionysiaca Volume II: Books 16-35
+        </a>
+      </li>
+      <li>
         <a href='https://ryanfb.github.io/loebolus-data/L355.pdf' onclick="trackOutboundLink('https://ryanfb.github.io/loebolus-data/L355.pdf'); return false;">
           L355 - Livy -- Livy VI: Books 23-25
+        </a>
+      </li>
+      <li>
+        <a href='https://ryanfb.github.io/loebolus-data/L356.pdf' onclick="trackOutboundLink('https://ryanfb.github.io/loebolus-data/L356.pdf'); return false;">
+          L356 - Nonnos -- Dionysiaca Volume III: Books 36-48
         </a>
       </li>
       <li>
