--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <p>
       You can also download
       <a href='https://github.com/ryanfb/loebolus-data/archive/gh-pages.zip'>
-        a .zip containing all 274 PDF's
+        a .zip containing all 275 PDF's
       </a>
       (3.2GB).
       Or
@@ -1164,6 +1164,11 @@
       <li>
         <a href='https://ryanfb.github.io/loebolus-data/L289.pdf'>
           L289 - Philo -- Volume VI: On Abraham. On Joseph. On Moses
+        </a>
+      </li>
+      <li>
+        <a href='https://ryanfb.github.io/loebolus-data/L296.pdf'>
+          L296 - Sidonius -- Volume I: Poems. Letters, Books 1-2
         </a>
       </li>
       <li>
