--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <p>
       You can also download
       <a href='https://github.com/ryanfb/loebolus-data/archive/gh-pages.zip'>
-        a .zip containing all 275 PDF's
+        a .zip containing all 277 PDF's
       </a>
       (3.2GB).
       Or
@@ -842,6 +842,11 @@
         </a>
       </li>
       <li>
+        <a href='https://ryanfb.github.io/loebolus-data/L171N.pdf'>
+          L171N - Homer -- Iliad II: Books 13-24
+        </a>
+      </li>
+      <li>
         <a href='https://ryanfb.github.io/loebolus-data/L174.pdf'>
           L174 - Frontinus -- Stratagems. Aqueducts of Rome
         </a>
@@ -1079,6 +1084,11 @@
       <li>
         <a href='https://ryanfb.github.io/loebolus-data/L250.pdf'>
           L250 - Tertullian -- Apology and De Spectaculis. Octavius
+        </a>
+      </li>
+      <li>
+        <a href='https://ryanfb.github.io/loebolus-data/L251.pdf'>
+          L251 - Vitruvius -- On Architecture I: Books 1-5
         </a>
       </li>
       <li>
