--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
       </li>
       <li>
         <a href='https://ryanfb.github.io/loebolus-data/L169.pdf'>
-          L169 - Thucydides -- http://www.archive.org/details/historyofpelopon04thucuoft
+          L169 - Thucydides -- History of the Peleponnesian War IV: Books 7-8. General Index
         </a>
       </li>
       <li>
