bundle exec ./yaml2html.rb < associations.yml

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </li>
       <li>
         <a href='https://ryanfb.github.io/loebolus-data/L022N.pdf'>
-          L022N - Terence -- Terence I: The Lady of Andeos. The Self-Tormentor. The Eunich
+          L022N - Terence -- Terence I: The Lady of Andeos. The Self-Tormentor. The Eunuch
         </a>
       </li>
       <li>
