--- a/index.html
+++ b/index.html
@@ -77,8 +77,23 @@
       <a href='http://www.edonnelly.com/loebs.html'>
         Edwin Donnelly's “Downloebables”
       </a>
-      , aiming to make all the public domain Loebs more easily downloadable
+      , aiming to make
+      <a href='https://en.wikipedia.org/wiki/Loeb_Classical_Library'>
+        all the public domain Loebs
+      </a>
+      more easily downloadable
       by re-hosting the PDF's directly, without the need to enter CAPTCHA's.
+    </p>
+    <p>
+      Key:
+      <ul style='list-style-type: none;'>
+        <li class='greek'>
+          Greek
+        </li>
+        <li class='latin'>
+          Latin
+        </li>
+      </ul>
     </p>
     <p>
       You can also download
